--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ VITE_NODE_ENV=development
 # Security
 VITE_ENABLE_CONSOLE_LOGS=true
 
+# Feature Flags
+VITE_FEATURE_TRIP_PLANNER=false
+
 # Analytics (opcional)
 VITE_UMAMI_URL=
 VITE_UMAMI_WEBSITE_ID=
