--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ VITE_ENABLE_CONSOLE_LOGS=true
 
 # Feature Flags
 VITE_FEATURE_TRIP_PLANNER=true
+VITE_FEATURE_ROUTE_ARROWS=false
 
 # Analytics (opcional)
 VITE_UMAMI_URL=
